# CAiMIRA

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  UsageInstructions.md  acknowledgments.md  app.sh  requirements.new.txt  requirements.txt  ruff.toml  setup.cfg  setup.py
caimira/: .readthedocs.yaml  .zenodo.json  MANIFEST.in  README.md  __init__.py  dataclass_utils.py  enums.py  models.py  profiler.py  pyproject.toml  setup.cfg  state.py
caimira/apps/: __init__.py  babel-mapping.ini  expert.py  expert_co2.py  simulator.py
caimira/apps/calculator/: DEFAULT_DATA.py  __init__.py  __main__.py  co2_model_generator.py  co2_report_generator.py  data_service.py  defaults.py  form_data.py  markdown_tools.py  model_generator.py  report_generator.py
caimira/apps/calculator/static/css/: form.css
caimira/apps/calculator/static/js/: co2_form.js  form.js  report.js
caimira/apps/expert/: caimira.ipynb  cara.ipynb
caimira/apps/expert_co2/: caimira.ipynb
caimira/apps/locale/: base.pot
caimira/apps/locale/fr/LC_MESSAGES/: messages.mo  messages.po
caimira/apps/simulator/: caimira.ipynb
caimira/apps/static/css/: style.css
caimira/apps/static/js/: js_packaged_for_theme.js  usage-tracking.js
caimira/apps/templates/: about.html.j2  common_text.md.j2  error.html.j2  expert-app.html.j2
caimira/apps/templates/base/: calculator.form.html.j2  calculator.report.html.j2  index.html.j2  layout.html.j2  userguide.html.j2
caimira/apps/templates/cern/: calculator.form.html.j2  calculator.report.html.j2  index.html.j2  userguide.html.j2
caimira/cache/: global_store.py
caimira/calculator/docs/: caimira.monte_carlo.rst  full_diameter_dependence.rst
caimira/calculator/models/: enums.py  models.py
caimira/calculator/models/monte_carlo/: data.py  sampleable.py
caimira/calculator/report/: report_generator.py
caimira/calculator/store/: data_registry.py  data_service.py
caimira/calculator/tests/: conftest.py  test_dataclass_utils.py  test_full_algorithm.py  test_infected_population.py  test_monte_carlo.py  test_monte_carlo_full_models.py
caimira/calculator/tests/apps/calculator/: conftest.py  test_model_generator.py
caimira/calculator/tests/data/: test_weather.py
caimira/calculator/tests/models/: test_co2_concentration_model.py  test_concentration_model.py  test_mask.py  test_piecewiseconstant.py  test_short_range_model.py
caimira/calculator/validators/: defaults.py
caimira/calculator/validators/co2/: co2_validator.py
caimira/calculator/validators/virus/: virus_validator.py
caimira/data/: __init__.py
caimira/docs/: Dockerfile  caimira.apps.calculator.rst  caimira.apps.rst  caimira.data.rst  caimira.rst  caimira.tests.apps.calculator.rst  caimira.tests.models.rst  cara.data.rst  cara.tests.apps.calculator.rst  cara.tests.data.rst  cara.tests.rst  conf.py  full_diameter_dependence.rst  index.rst  style_docs.py
caimira/docs/mkdocs/: mkdocs.yml
caimira/docs/mkdocs/docs/: LICENSE.md  index.md
caimira/docs/mkdocs/docs/code/: architecture.md  co2_concentration.md  dynamic_groups.md  fitting_algorithm.md  rest_api.md  viral_transmission.md
caimira/docs/mkdocs/docs/root/: about.md  deployment.md  installation.md  open_source_acknowledgments.md  physics_model.md
caimira/docs/sphinx/: conf.py  index.rst
caimira/monte_carlo/: __init__.pyi  data.py  models.py  sampleable.py
caimira/scripts/data/: WeeklySummary_COVID19_VE_Studies_08Sep2022_adapted.xlsx  vaccine_effectiveness.py
caimira/scripts/themes/base/: caimira_script.command  caimira_script.sh
caimira/scripts/themes/cern/: caimira_script.command  caimira_script.sh
caimira/src/caimira/api/: app.py
caimira/src/caimira/api/controller/: co2_report_controller.py  report_controller.py  virus_report_controller.py
caimira/src/caimira/api/routes/: base_handler.py  landing_routes.py  report_routes.py  routes.py
caimira/src/caimira/calculator/docs/: caimira.api.controller.rst  caimira.api.routes.rst  caimira.api.rst  caimira.rst  (+11 more)
caimira/src/caimira/ventilation/: co2_vent.ipynb  deterministic_emitters.py  find_air_exch.py  find_requirements.py  get_models.py  model_response.py  plot_results.py  scenarios.py  show_requirements.py  ventilation.py  ventilation_experiments.ipynb
caimira/store/: configuration.py  data_registry.py  data_service.py  global_store.py
caimira/tests/: conftest.py  test_cara.py  test_conditional_probability.py  test_data_service.py  test_dataclass_utils.py  test_dynamic_concentration_model.py  test_dynamic_infected.py  test_expiration.py  test_full_algorithm.py  test_infected_population.py  test_known_quantities.py  test_model.py  test_monte_carlo.py  test_monte_carlo_full_models.py  test_multiple_populations.py  test_predefined_distributions.py  test_sampleable_distribution.py  test_state.py  test_ventilation.py
caimira/tests/apps/: test_api_app.py  test_expert_app.py
caimira/tests/apps/calculator/: conftest.py  test_aria_model_generator.py  test_data_service_api.py  test_markdown_tools.py  test_model_generator.py  test_report_generator.py  test_report_json.py  test_specific_model_generator.py  test_webapp.py
caimira/tests/data/: test_viral_load.py  test_weather.py
caimira/tests/dynamic_emitters/: test_dynamic_co2_concentration_model.py  test_dynamic_concentration_model.py  test_multiple_population.py
caimira/tests/models/: conftest.py  test_co2_concentration_model.py  test_concentration_model.py  test_dynamic_activities.py  test_dynamic_concentration_model.py  test_dynamic_exposure_model.py  test_dynamic_population.py  test_exposure_model.py  test_fitting_algorithm.py  test_mask.py  test_piecewiseconstant.py  test_short_range_model.py  test_total_concentration_model.py  test_virus.py
caimira/tests/ventilation/: test_air_exch_from_co2.py  test_expected_breathing_rate.py  test_ventilation.py
cern_caimira/: README.md  pyproject.toml  requirements.txt
cern_caimira/tests/: conftest.py  test_expert_app.py  test_markdown_tools.py  test_report_generator.py  test_state.py  test_webapp.py
(+303 files in other folders)
