[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caimira"
version = "2.0.0"
description = "CAiMIRA - CERN Airborne Model for Indoor Risk Assessment"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Andre Henriques", email = "andre.henriques@cern.ch" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.9"
dependencies = [
    "ipykernel",
    "ipympl>=0.9.0",
    "ipywidgets<8.0",
    "Jinja2",
    "loky",
    "matplotlib",
    "memoization",
    "mistune",
    "numpy",
    "pandas",
    "psutil",
    "pyinstrument",
    "pyjwt",
    "python-dateutil",
    "retry",
    "ruptures",
    "scipy",
    "scikit-learn",
    "timezonefinder",
    "tornado",
    "types-retry",
]

[project.optional-dependencies]
dev = []
test = [
    "pytest",
    "pytest-mypy >= 0.10.3",
    "mypy >= 1.0.0",
    "pytest-tornasync",
    "numpy-stubs @ git+https://github.com/numpy/numpy-stubs.git",
    "types-dataclasses",
    "types-python-dateutil",
    "types-requests"
]
doc = [
    "sphinx",
    "sphinx_rtd_theme"
]

[project.urls]
Homepage = "https://github.com/cern/caimira"

[tool.setuptools]
packages = ["caimira"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
addopts = "--mypy"

[tool.mypy]
no_warn_no_return = true
exclude = "caimira/profiler.py"
ignore_missing_imports = true # TODO what to do here? 

[tool.mypy-loky]
ignore_missing_imports = true

[tool.mypy-ipympl]
ignore_missing_imports = true

[tool.mypy-ipywidgets]
ignore_missing_imports = true

[tool.mypy-matplotlib]
ignore_missing_imports = true

[tool.mypy-mistune]
ignore_missing_imports = true

[tool.mypy-qrcode]
ignore_missing_imports = true

[tool.mypy-scipy]
ignore_missing_imports = true

[tool.mypy-timezonefinder]
ignore_missing_imports = true

[tool.mypy-pandas]
ignore_missing_imports = true

[tool.mypy-pstats]
follow_imports = "skip"

[tool.mypy-tabulate]
ignore_missing_imports = true

[tool.mypy-ruptures]
ignore_missing_imports = true
